correct font and weights, add alt to images, add spacing on product cards

--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ a {
 	display: flex;
 	flex-direction: column;
 	width: 600px;
+    gap: 15px;
 }
 
 .section01-left-items>h1 {
@@ -82,7 +83,6 @@ a {
 	flex-direction: column;
 	align-items: center;
 	justify-content: space-around;
-	gap: 20px;
 	height: 400px;
 	padding: 0px 300px 0px 300px;
 	height: 500px;
@@ -97,8 +97,11 @@ a {
 .card {
 	display: flex;
 	justify-content: center;
+	align-items: center;
 	flex-direction: column;
 	flex: 0 1 0;
+	gap: 10px;
+	text-align: center;
 }
 
 .section02>h2 {
@@ -126,6 +129,7 @@ a {
 	align-content: center;
 	justify-content: center;
 	padding: 20px 300px 50px 300px;
+	gap: 10px;
 }
 
 #quote {
@@ -135,7 +139,6 @@ a {
 	font-style: italic;
 	margin: 0px;
 	align-self: flex-start;
-
 }
 
 #quote-author {
